--- a/WheresMyPluginsAt.csproj
+++ b/WheresMyPluginsAt.csproj
@@ -7,6 +7,7 @@
     <LangVersion>latest</LangVersion>
     <DebugType>embedded</DebugType>
     <PathMap>$(MSBuildProjectDirectory)=$(MSBuildProjectName)</PathMap>
+	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <EmbedAllSources>true</EmbedAllSources>
     <!--Don't bother setting anything to do with the output path, HUD will do it for you if you put the source code inside Plugins/Source-->
   </PropertyGroup>
