--- a/WheresMyPluginsAt.csproj
+++ b/WheresMyPluginsAt.csproj
@@ -13,10 +13,10 @@
   </PropertyGroup>
   <ItemGroup>
     <!--Rather than replacing this with absolute or relative paths, you should create an environment variable for wherever your HUD folder is-->
-    <Reference Include="ExileCore">
+    <Reference Include="ExileCore2">
       <HintPath>$(exileCore2Package)\ExileCore2.dll</HintPath>
     </Reference>
-    <Reference Include="GameOffsets">
+    <Reference Include="GameOffsets2">
       <HintPath>$(exileCore2Package)\GameOffsets2.dll</HintPath>
       <Private></Private>
     </Reference>
@@ -25,6 +25,5 @@
     <PackageReference Include="ImGui.NET" Version="1.90.0.1" />
     <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="SharpDX.Mathematics" Version="4.2.0" />
   </ItemGroup>
 </Project>
